# lex-pdftotext-v2

./: .env.example  .gitignore  .pre-commit-config.yaml  BUILD_COMPLETO.ps1  BUILD_GUIDE.md  BUILD_WINDOWS.md  CHANGELOG.md  CHANGELOG_SECURITY.md  CLAUDE.md  CONTRIBUTING.md  GITHUB_SETUP.md  LICENSE  OCR_GUIDE.md  README.md  RELEASE_NOTES_v0.4.0.md  SECURITY_IMPROVEMENTS.md  UPDATE_SUMMARY.md  WORKFLOW.md  app_ui.py  build_exe.py  build_from_wsl.ps1  build_utils.py  build_windows.ps1  config.yaml  example.py  installer.iss  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  verify_build.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: lint.yml  release.yml  test.yml
assets/: ICON_CREATION.md
assets/html/: index.html
docker/: .env.example  Dockerfile.api  Dockerfile.frontend  Dockerfile.worker  README.md  docker-compose.prod.yml  docker-compose.yml
docs/source/: changelog.rst  conf.py  contributing.rst  index.rst  installation.rst  quickstart.rst  usage.rst
docs/source/api/: extractors.rst  formatters.rst  index.rst  processors.rst  utils.rst
frontend/: next.config.ts  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/batch/: page.tsx
frontend/app/extract/: page.tsx
frontend/app/info/: page.tsx
frontend/app/jobs/: page.tsx
frontend/app/merge/: page.tsx
frontend/app/tables/: page.tsx
frontend/components/: job-card.tsx  markdown-viewer.tsx  pdf-dropzone.tsx  processing-options.tsx
frontend/components/layout/: app-sidebar.tsx  header.tsx
frontend/lib/: api.ts  queries.ts  query-provider.tsx  types.ts
mcp_server/: server.py
scripts/archive/: ATUALIZAR_CODIGO.ps1  BUILD_FACIL.bat  BUILD_FACIL_v2.bat  COPIAR_E_BUILDAR.ps1  COPIAR_SIMPLES.ps1  build_windows.bat  build_windows.ps1  build_windows_auto.ps1
src/: __init__.py
src/extractors/: __init__.py  base.py  pymupdf_extractor.py  table_extractor.py
src/formatters/: __init__.py  json_formatter.py  markdown_formatter.py  table_formatter.py
src/lex_pdftotext/: __init__.py  cli.py
src/lex_pdftotext/api/: __init__.py  auth.py  cli_admin.py  deps.py  main.py  middleware.py  models.py  routes_keys.py
src/lex_pdftotext/formatters/: __init__.py  index_generator.py  markdown_formatter.py
src/lex_pdftotext/models/: __init__.py  api_key.py  base.py  usage.py
src/lex_pdftotext/processors/: metadata_parser.py
src/lex_pdftotext/storage/: __init__.py  base.py  factory.py  local.py  s3.py
src/lex_pdftotext/utils/: patterns.py  timeout.py
src/lex_pdftotext/worker/: __init__.py  main.py  tasks.py
src/processors/: __init__.py  image_analyzer.py  metadata_parser.py  text_normalizer.py
src/utils/: __init__.py  cache.py  config.py  exceptions.py  logger.py  patterns.py  timeout.py  validators.py
tests/: test_api.py  test_cache.py  test_config.py  test_extraction.py  test_image_extraction.py  test_index_generator.py  test_json_formatter.py  test_markdown_formatter.py  test_markdown_with_index.py  test_metadata_positions.py  test_patterns_position.py  test_pymupdf_extractor.py  test_saas.py  test_table_extraction.py  test_table_extractor.py  test_timeout.py  test_validators.py
